--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-validator": "^6.13.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.95.12",
+    "moment": "^2.29.4",
     "morgan": "^1.10.0",
     "pg": "^8.7.1"
   },
